# llm-for-cpu

./: .gitignore  README.md  SConstruct  environment.yml  read_stats.py  run_batches  setup_conda.sh  setup_env  start_conda
data_analysis/: ml_experiments.py  parse_viz.ipynb  parse_viz_act.py  review.csv  testing_act.py
data_analysis/params/params_100K_0/: stats.txt
data_analysis/params/params_100K_1/: stats.txt
data_analysis/params/params_100K_10/: stats.txt
data_analysis/params/params_100K_11/: stats.txt
data_analysis/params/params_100K_12/: stats.txt
data_analysis/params/params_100K_13/: stats.txt
data_analysis/params/params_100K_14/: stats.txt
data_analysis/params/params_100K_15/: stats.txt
data_analysis/params/params_100K_2/: stats.txt
data_analysis/params/params_100K_3/: config.json  stats.txt
data_analysis/params/params_100K_4/: config.ini  stats.txt
data_analysis/params/params_100K_5/: stats.txt
data_analysis/params/params_100K_6/: stats.txt
data_analysis/params/params_100K_7/: stats.txt
data_analysis/params/params_100K_8/: stats.txt
data_analysis/params/params_100K_9/: stats.txt
miniconda/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  archspec-0.2.1-pyhd3eb1b0_0.json  boltons-23.0.0-py312h06a4308_0.json  brotli-python-1.0.9-py312h6a678d5_7.json  bzip2-1.0.8-h7b6447c_0.json  c-ares-1.19.1-h5eee18b_0.json  ca-certificates-2023.12.12-h06a4308_0.json  certifi-2024.2.2-py312h06a4308_0.json  cffi-1.16.0-py312h5eee18b_0.json  charset-normalizer-2.0.4-pyhd3eb1b0_0.json  conda-24.1.2-py312h06a4308_0.json  conda-content-trust-0.2.0-py312h06a4308_0.json  conda-libmamba-solver-23.12.0-pyhd3eb1b0_1.json  conda-package-handling-2.2.0-py312h06a4308_0.json  conda-package-streaming-0.9.0-py312h06a4308_0.json  cryptography-41.0.7-py312hdda0065_0.json  distro-1.8.0-py312h06a4308_0.json  expat-2.5.0-h6a678d5_0.json  fmt-9.1.0-hdb19cb5_0.json  icu-73.1-h6a678d5_0.json  idna-3.4-py312h06a4308_0.json  jsonpatch-1.32-pyhd3eb1b0_0.json  jsonpointer-2.1-pyhd3eb1b0_0.json  krb5-1.20.1-h143b758_1.json  ld_impl_linux-64-2.38-h1181459_1.json  libarchive-3.6.2-h6ac8c49_2.json  libcurl-8.5.0-h251f7ec_0.json  libedit-3.1.20230828-h5eee18b_0.json  libev-4.33-h7f8727e_1.json  libffi-3.4.4-h6a678d5_0.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libmamba-1.5.3-haf1ee3a_0.json  libmambapy-1.5.3-py312h2dafd23_0.json  libnghttp2-1.57.0-h2d74bed_0.json  libsolv-0.7.24-he621ea3_0.json  libssh2-1.10.0-hdbd6064_2.json  libstdcxx-ng-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  (+33 more)
miniconda/etc/profile.d/: conda.csh  conda.sh
miniconda/lib/: libcurl.so.4.8.0  libgssapi_krb5.so.2.2  libkadm5clnt_mit.so.12.0  libkadm5srv_mit.so.12.0  libkdb5.so.10.0  libkrb5.so.3.3  libtinfow.so.6.4  libxml2.so.2.10.4  tclConfig.sh  tkConfig.sh
miniconda/lib/itcl4.2.2/: itclConfig.sh
miniconda/lib/pkgconfig/: expat.pc  fmt.pc  formw.pc  gmock.pc  gmock_main.pc  gssrpc.pc  gtest.pc  gtest_main.pc  history.pc  icu-i18n.pc  icu-io.pc  icu-uc.pc  kadm-client.pc  kadm-server.pc  kdb.pc  krb5-gssapi.pc  krb5.pc  libarchive.pc  libcares.pc  libcrypto.pc  libcurl.pc  libedit.pc  libffi.pc  liblz4.pc  liblzma.pc  libnghttp2.pc  libpcre2-16.pc  libpcre2-32.pc  libpcre2-8.pc  libpcre2-posix.pc  libsolv.pc  libsolvext.pc  libssh2.pc  libssl.pc  libxml-2.0.pc  (+20 more)
miniconda/sbin/: kadmind  kprop  kpropd  krb5kdc
output/test_embedding/: config.ini  config.json  stats.txt
scripts/: bert_sst.py  caches.py  memory.py  run_params_se.py  se_mode.py  sendmmsg_test.cpp  simple.py  simple_caches.py  simple_heartbeat.py  x86-ubuntu-run.py
scripts/embed_python/: CMakeCache.txt  CMakeLists.txt  bert_sst.cpp  embed_interpreter.sh  hotspot_results.txt  hotspot_results.xlsx  test.cpp
src/cpu/: base.cc
src/mem/: abstract_mem.cc  abstract_mem.hh  request.hh
src/periodic_check/: CheckObject.py  SConscript  check_object.cc  check_object.hh
src/python/: SConscript
src/sim/: syscall_emul.cc  syscall_emul.hh
tools/bert.cpp/: CMakeLists.txt  CMakeLists_bkup.txt  bert.cpp  bert.h
tools/bert.cpp/examples/: CMakeLists.txt  fp16_dot.cpp  main.cpp
tools/llama.cpp/: CMakeLists.txt  Makefile
tools/llama.cpp/common/: CMakeLists.txt  build-info.cpp  common.cpp  common.h  log.h
tools/llama.cpp/examples/main/: CMakeLists.txt  main.cpp
(+1123 files in other folders)
